# gamelearn

./: CMakeLists.txt
header/: Entity.h  Math.h  RenderWindow.h
image/GFX/: Run.aseprite
source/: Entity.cpp  Math.cpp  RenderWindow.cpp  main.cpp
